--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Cheese</title>
   </head>
   <body>
-    <h1>Cheese</h1>
-    <p>cheeses</p>
+    <header>
+      <h1>Cheese</h1>
+      <p>This site is dedicated to cheese.</p>
+    </header>
+    <main></main>
+    <aside></aside>
+    <footer></footer>
   </body>
 </html>
